<resources>
    <string name="app_name">Trabalho04</string>
    <string name="prime_dog">PRIME DOG FICHA VETERINÁRIA</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="sexo">Sexo</string>
    <string name="dica_senha">Deve possuir entre 6 a 8 caracteres contendo caracteres especiais (!@#%$*)</string>
    <string name="esp_cie">Espécie</string>
    <string name="peso">Peso</string>
    <string name="cor">Cor</string>
    <string name="data_de_nascimento">Data de nascimento (dd/mm/aaaa)</string>
    <string name="voltar">Voltar</string>
    <string name="salvarAnimal">Salvar Animal</string>
    <string name="editar_animal">Editar animal</string>
    <string name="seus_animais">Seus animais:</string>
    <string name="bem_vindo_a">Bem vindo(a)!</string>
    <string name="cadastrar_animal">Cadastrar animal</string>
    <string name="sair">Sair</string>
    <string name="selecionar_data">Selecionar data</string>
    <string name="salvar_login">Salvar login</string>
    <string name="excluir_animal">Excluir animal</string>
    <string name="id_animal">ID Animal: </string>
    <string name="n_o">Não</string>
    <string name="sim">Sim</string>
    <string name="tem_certeza_que_deseja_deletar">Tem certeza que deseja deletar?</string>

    <string-array name="arraySexoHumano">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

    <string-array name="arraySexoAnimal">
        <item>Macho</item>
        <item>Fêmea</item>
    </string-array>

    <string-array name="arrayEspecie">
        <item>Cão</item>
        <item>Gato</item>
    </string-array>

</resources>
