<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastroCliente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txvNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/edtNomeCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/edtEmailCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txvSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/edtSenhaCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvDicaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dica_senha"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txvConfirmarSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_senha" />

        <EditText
            android:id="@+id/edtConfirmarSenhaCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirmar_senha"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvSexoCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo" />

        <Spinner
            android:id="@+id/spnSexoCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCadastrarAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="abrirTelaLogin"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>