<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastroAnimal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvNomeAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/edtNomeAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txvEspecieAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esp_cie" />

            <Spinner
                android:id="@+id/spnEspecieAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvSexoAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo" />

            <Spinner
                android:id="@+id/spnSexoAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvPesoAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/peso" />

            <EditText
                android:id="@+id/edtPesoAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txvCorAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cor" />

            <EditText
                android:id="@+id/edtCorAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txvDataNascimentoAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_de_nascimento" />

            <EditText
                android:id="@+id/edtDataNascimentoAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <CheckBox
                android:id="@+id/ckbVacina1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/ckbVacina2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/ckbVacina3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/ckbVacina4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnCadastrarAnimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="botaoCadastrar"
                android:text="@string/cadastrar" />

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="botaoVoltar"
                android:text="@string/voltar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>